<resources>
    <string name="app_name">Stockify</string>
    <string name="title_activity_splashscreen">Stockify</string>
    <string name="login_failure">Sign In attempt failure, please try again!</string>
    <string name="other_failure">Something went wrong, please try again!</string>
    <string name="percent">%s %</string>

    <string name="creating_user">Creating/Updating User …</string>
    <string name="adding_alert">Adding alert …</string>
    <string name="loading">Loading …</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_alerts">Home</string>
    <string name="title_trending">Trending</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="user_name">User name</string>
    <string name="user_email">user@email.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="logged_out">You have been logged out</string>

    <string name="search_stocks">Search Stocks</string>
    <string name="expected_returns">Expected returns</string>
    <string name="target_price">Target price</string>
    <string name="alert_created">Alert created</string>
    <string name="add_alert">Add Alert</string>
    <string name="remove_alert">Remove Alert</string>
    <string name="alert_removed">Alert removed</string>
    <string name="remove_alert_msg">Are you sure that you want to remove this alert?</string>
    <string name="create">Create</string>
    <string name="operator_title">Choose alert type :</string>
    <string name="enter_price">Enter your target price</string>

    <string name="summary">Summary</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="volume">Volume</string>
    <string name="avg_price">Avg Price</string>
    <string name="last_quantity">Last Quantity</string>
    <string name="buy_quantity">Buy Quantity</string>
    <string name="lower_circuit">Lower Circuit</string>
    <string name="upper_circuit">Upper Circuit</string>

    <string-array name="operators">
        <item>Greater than or equal to</item>
        <item>Less than or equal to</item>
    </string-array>
</resources>