<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AlertDetailsActivity">

    <TextView
        android:id="@+id/name"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/summary"
        android:textSize="20sp"
        android:text="@string/summary"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/first_row"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/summary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/open"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/open"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/volume"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/volume"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/first_row"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/second_row"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/high"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/high"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/low"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/low"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/second_row"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/third_row"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/close"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/close"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/avg_price"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/avg_price"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/third_row"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fourth_row"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/last_quantity"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/last_quantity"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/buy_quantity"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/buy_quantity"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/fourth_row"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fifth_row"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/divider4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/lower_circuit"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lower_circuit"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:text="@string/upper_circuit"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/upper_circuit"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_alert"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>